Changed the image

--- a/web.html
+++ b/web.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-	<img src="pankaj-patel-_SgRNwAVNKw-unsplash.jpg" alt="background image" id="backimg">
+	<img src="code_image.jpg" alt="background image" id="backimg">
 	<div class="color">
 	<nav class="navbar">
 		<div class="logo">
