--- a/web.html
+++ b/web.html
@@ -33,7 +33,7 @@
 
 
 	<div class="center_content">
-		<h1 id="h1">HELLO I AM VANSH</h1>
+		<h1 id="h1">HELLO I AM VANSHS</h1>
 		<h2 id="h2">WELCOME TO MY WEBSITE</h2>
 	</div>
 
